<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PinInfoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.685" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <View
        android:id="@+id/_bg__login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/_bg__login_shape"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<!--    <ImageView-->
<!--        android:id="@+id/trail_img"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:fontFamily="Montserrat"-->
<!--        android:text="@string/login_string"-->
<!--        android:textColor="@color/email_color"-->
<!--        android:textSize="38sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="@id/guideline"-->
<!--        app:layout_constraintStart_toStartOf="@id/guideline"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline14"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/guideline14"-->
<!--        android:contentDescription="TODO" />-->


    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline14"
        app:layout_constraintStart_toStartOf="@id/guideline14"
        app:layout_constraintTop_toTopOf="@id/guideline" />

<!--    android:scaleType="centerCrop"-->
<!--    app:layout_constraintDimensionRatio="1:1"-->

    <RelativeLayout
        android:id="@+id/rectangle_1379"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="@id/guideline1">

        <View
            android:id="@+id/container"
            android:layout_width="390dp"
            android:layout_height="400dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/rectangle_1379_shape" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:fontFamily="Abel"
            android:text="@string/titulo"
            android:textColor="@color/email_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="210dp"
            android:fontFamily="Abel"
            android:text="@string/latitude"
            android:textColor="@color/email_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="240dp"
            android:fontFamily="Abel"
            android:text="@string/longitude"
            android:textColor="@color/email_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="270dp"
            android:fontFamily="Abel"
            android:text="@string/altitude"
            android:textColor="@color/email_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="300dp"
            android:fontFamily="Abel"
            android:text="@string/descricao"
            android:textColor="@color/email_color"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView android:id="@+id/braguia"
        android:fontFamily="Montserrat"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/braguia_color"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:text="@string/braguia_string"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline12"/>

    <ImageView android:id="@+id/location__1__3"
        android:src="@drawable/location__1__2"
        android:contentDescription="location__1__3"
        android:layout_width="49dp"
        android:layout_height="62dp"
        app:layout_constraintTop_toTopOf="@id/guideline10"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline"/>

    <ImageButton
        android:id="@+id/btn_open_map"
        android:background="@drawable/info"
        android:clickable="false"
        android:visibility="invisible"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/guideline11"
        app:layout_constraintBottom_toBottomOf="@id/guideline11"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline5" />

    <ImageButton
        android:id="@+id/btn_download"
        android:background="@drawable/download"
        android:clickable="false"
        android:visibility="invisible"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/guideline11"
        app:layout_constraintBottom_toBottomOf="@id/guideline11"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline8" />




</androidx.constraintlayout.widget.ConstraintLayout>
